--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Falk Solutions - IT Linux Server DevOps Freelancer</title>
+    <meta name="description" content="Professionelle DevOps-Beratung, Linux-Server-Administration und IT-Infrastruktur-Services von Falk Solutions. Ihr zuverlässiger Partner für moderne Technologielösungen." />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
