--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Falk Solutions - IT Linux Server DevOps Freelancer</title>
+    <title>Falk Solutions - IT </title>
     <meta name="description" content="Professionelle DevOps-Beratung, Linux-Server-Administration und IT-Infrastruktur-Services von Falk Solutions. Ihr zuverlässiger Partner für moderne Technologielösungen." />
   </head>
   <body>
